[package]
name = "wedis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
concat-string = "1.0.1"
itertools = "0.13.0"
popcnt = "0.1.0"
redcon = "0.1.2"
# rocksdb 0.22.0 panics when opening a TransactionDB: https://github.com/rust-rocksdb/rust-rocksdb/issues/881
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" }
serde = "1.0.203"
serde_json = "1.0.119"
submap = "0.3.0"
thiserror = "1.0.61"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.12.1"

[patch.crates-io]
#redcon = { git = "https://github.com/karashiiro/redcon.rs" }
redcon = { path = '../redcon.rs' }
